src/objects/fflbx__ReceiptErrorLog__c.object
<CustomObject>
    <customHelpPage>fflbx__receipthelp</customHelpPage>
    <fields>
        <fullName>fflbx__Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__ReceiptLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AR Cash Transaction Line Item</label>
        <referenceTo>fflbx__ReceiptLineItem__c</referenceTo>
        <relationshipLabel>AR Cash Transaction Errors Log</relationshipLabel>
        <relationshipName>ReceiptErrorsLog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__Receipt__c</fullName>
        <label>AR Cash Transaction</label>
        <referenceTo>fflbx__Receipt__c</referenceTo>
        <relationshipLabel>AR Cash Transaction Errors Log</relationshipLabel>
        <relationshipName>ReceiptErrorsLog</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>AR Cash Transaction Error Log</label>
    <nameField>
        <displayFormat>REL-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Cash Transaction Errors Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>